@@ -120,6 +120,7 @@ production.
 * (bug 10574) Add an option to allow all pages to be exported by Special:Export.
 * mediawiki.js Message object constructor is now publicly available as mw.Message.
 * (bug 29309) allow CSS class per tooltip (tipsy)
+* (bug 33565) Add accesskey/tooltip to submit buttons on Special:EditWatchlist.
 
 === Bug fixes in 1.19 ===
 * $wgUploadNavigationUrl should be used for file redlinks if.
